Deal with different errno.h values on different POSIX runtimes